# surfman

./: .gitignore
libsurfman/: AUTHORS  Makefile.am  README  configure.ac  libsurfman-config.in  libsurfman-config.src.in  libsurfman.pc.in  libsurfman.pc.src.in  version-files
libsurfman/src/: Makefile.am  backtrace.c  configfile.c  ext_prototypes.h  io.c  list.h  mapcache.c  project.h  prototypes.h  rect.c  surface.c  surfman-head.h.in  surfman-tail.h  surfman.c  surfman.h  util.c  xc.c
libvgaemu/: Makefile.am  configure.ac  libvgaemu-config.src.in  libvgaemu.pc.src.in  version-files
libvgaemu/src/: Makefile.am  libvgaemu.c  libvgaemu.h  libvgaemu_int.h
plugins/drm/: AUTHORS  Makefile.am  configure.ac
plugins/drm/resources/: vesa_modelines
plugins/drm/scripts/: modeline2struct.sh
plugins/drm/src/: Makefile.am  backlight.c  device-intel.c  device.c  drm-plugin.c  drm-plugin.h  framebuffer-dumb.c  framebuffer-i915_foreign.c  hotplug.c  list.h  monitor.c  project.h  prototypes.h  udev.c  utils.h  vesa-modelines.h
plugins/glgfx/: Makefile.am  configure.ac  glgfx.c  glgfx.h
plugins/linuxfb/: Makefile.am  configure.ac  linuxfb.c  linuxfb.h
plugins/sample/: Makefile.am  configure.ac  project.h  prototypes.h  sample.c
plugins/vesa/: Makefile.am  configure.ac  vesa.c  vesa.h
plugins/vnc/: Makefile.am  configure.ac  list.h  project.h  prototypes.h  vnc.c
plugins/websocket/: Makefile.am  configure.ac
plugins/websocket/src/: Makefile.am  project.h  prototypes.h  websocket.c
surfman/: AUTHORS  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.ac  configure.in  version-files
surfman/app/: Makefile.am  screenshot.c
surfman/maintainer/: make_distn  tag  tidy
surfman/src/: Makefile.am  dbus.c  dbus_glue.c  display.c  display.h  domain.c  domain.h  fbtap.c  ioemugfx.c  list.h  lockfile.c  plugin.c  plugin.h  project.h  prototypes.h  resolution.c  rpc.c  snapshot.c  splashfont.h  splashscreen.c  splashscreen.h  surface.c  surface.h  surfman.c  util.c  version.h.in  vgpu.c  vgpu.h  xenfb.c  xengfx.c  xengfx.h  xenstore-helper.c  xenstore-helper.h
